-background: black -color: green

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 h1 {
-    color: blueviolet;
+    color: rgb(43, 226, 95);
     font-weight: bold;
 }
 body {
-    background: darkgrey;
+    background: rgb(0, 0, 0);
 }
