--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
 h1 {
     color: rgb(43, 226, 95);
     font-weight: bold;
+    font-size: 50px;
+    background-color: black;
+    width: 100%;
+    height: 70px;
+    border-radius: 15px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
 }
 body {
-    background: rgb(0, 0, 0);
+    background: #fff ;
 }
